--- a/Photorama/Base.lproj/Main.storyboard
+++ b/Photorama/Base.lproj/Main.storyboard
@@ -49,7 +49,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="80"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="T2Q-ca-yga" id="xKo-VJ-Af7">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="79"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="79.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="s5z-NE-kGO">
@@ -78,7 +78,7 @@
                                         <rect key="frame" x="0.0" y="108" width="375" height="80"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8qh-7L-YNG" id="3Of-ol-0ly">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="79"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="79.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3gp-uR-JCB">
@@ -94,7 +94,7 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="IJn-i9-oN6">
+                                                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="IJn-i9-oN6">
                                                     <rect key="frame" x="29" y="29" width="20" height="20"/>
                                                 </activityIndicatorView>
                                             </subviews>
@@ -119,7 +119,7 @@
                                         <rect key="frame" x="0.0" y="188" width="375" height="80"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ORD-jl-qp8" id="krQ-II-cPp">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="79"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="79.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sorry, there are something wrong when loading the photos" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="upr-A6-iCe">
@@ -162,7 +162,7 @@
             </objects>
             <point key="canvasLocation" x="1090" y="1078"/>
         </scene>
-        <!--Image View-->
+        <!--Image View Controller-->
         <scene sceneID="esW-wr-CBC">
             <objects>
                 <viewController storyboardIdentifier="ImageViewController" id="NUT-B2-45x" customClass="ImageViewController" customModule="Photorama" customModuleProvider="target" sceneMemberID="viewController">
@@ -199,7 +199,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="bPA-ge-EZf" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="80a-Wm-jqf">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="80a-Wm-jqf">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -212,7 +212,7 @@
             </objects>
             <point key="canvasLocation" x="-759" y="790"/>
         </scene>
-        <!--Photorama View-->
+        <!--Photorama View Controller-->
         <scene sceneID="a4r-iQ-XPm">
             <objects>
                 <tableViewController id="bCd-rA-W3b" customClass="PhotoramaViewController" customModule="Photorama" customModuleProvider="target" sceneMemberID="viewController">
@@ -227,7 +227,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9oY-hL-er2" id="dUz-ns-RUl">
-                                            <rect key="frame" x="0.0" y="0.0" width="342" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="342" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Photo List" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aQS-Zm-w9e">
@@ -250,7 +250,7 @@
                                         <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="gOB-oF-VSY" id="QoA-Or-LG1">
-                                            <rect key="frame" x="0.0" y="0.0" width="342" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="342" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Photo Grid" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qIZ-Q5-VDg">
@@ -283,10 +283,10 @@
             </objects>
             <point key="canvasLocation" x="121" y="790"/>
         </scene>
-        <!--View Controller-->
+        <!--Photo Grid View Controller-->
         <scene sceneID="ZDx-gY-i6H">
             <objects>
-                <viewController id="B3T-zu-jSc" sceneMemberID="viewController">
+                <viewController id="B3T-zu-jSc" customClass="PhotoGridViewController" customModule="Photorama" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="lNl-Ab-aTN"/>
                         <viewControllerLayoutGuide type="bottom" id="MHR-gm-Ogm"/>
@@ -321,14 +321,34 @@
                                     <inset key="sectionInset" minX="2" minY="2" maxX="2" maxY="2"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PhotoGridCell" id="kPp-rb-hMf">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PhotoGridCell" id="kPp-rb-hMf" customClass="PhotoGridCell" customModule="Photorama" customModuleProvider="target">
                                         <rect key="frame" x="2" y="2" width="90" height="90"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="j4R-nR-iqT">
+                                                    <rect key="frame" x="35" y="35" width="20" height="20"/>
+                                                </activityIndicatorView>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TeT-lS-waW">
+                                                    <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
+                                                </imageView>
+                                            </subviews>
                                         </view>
-                                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstItem="j4R-nR-iqT" firstAttribute="centerY" secondItem="kPp-rb-hMf" secondAttribute="centerY" id="QcH-sU-tuQ"/>
+                                            <constraint firstItem="TeT-lS-waW" firstAttribute="top" secondItem="kPp-rb-hMf" secondAttribute="top" id="Qg1-IS-OHo"/>
+                                            <constraint firstAttribute="bottom" secondItem="TeT-lS-waW" secondAttribute="bottom" id="hAP-j5-3Gc"/>
+                                            <constraint firstItem="TeT-lS-waW" firstAttribute="leading" secondItem="kPp-rb-hMf" secondAttribute="leading" id="haW-Ap-2LN"/>
+                                            <constraint firstAttribute="trailing" secondItem="TeT-lS-waW" secondAttribute="trailing" id="kci-TW-5ar"/>
+                                            <constraint firstItem="j4R-nR-iqT" firstAttribute="centerX" secondItem="kPp-rb-hMf" secondAttribute="centerX" id="rkl-HI-DHQ"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="imageView" destination="TeT-lS-waW" id="mml-x8-oyc"/>
+                                            <outlet property="spinner" destination="j4R-nR-iqT" id="Faj-W9-PER"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
@@ -345,6 +365,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="collectionView" destination="Mbk-m1-6kK" id="Q2F-aW-uUO"/>
                         <segue destination="NUT-B2-45x" kind="show" identifier="ShowImageViewController" id="Fwx-qh-k6K"/>
                     </connections>
                 </viewController>
@@ -354,6 +375,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="Fwx-qh-k6K"/>
+        <segue reference="Y1n-BD-1Rt"/>
     </inferredMetricsTieBreakers>
 </document>
