--- a/Photorama/Base.lproj/Main.storyboard
+++ b/Photorama/Base.lproj/Main.storyboard
@@ -186,14 +186,34 @@
                                     <inset key="sectionInset" minX="2" minY="2" maxX="2" maxY="2"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PhotoGridCell" id="OEu-BO-z7M">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PhotoGridCell" id="OEu-BO-z7M" customClass="PhotoGridCell" customModule="Photorama" customModuleProvider="target">
                                         <rect key="frame" x="2" y="2" width="90" height="90"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="o4l-8v-lAm">
+                                                    <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                                </imageView>
+                                                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="qor-Aj-wrp">
+                                                    <rect key="frame" x="35" y="35" width="20" height="20"/>
+                                                </activityIndicatorView>
+                                            </subviews>
                                         </view>
-                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstItem="qor-Aj-wrp" firstAttribute="centerX" secondItem="OEu-BO-z7M" secondAttribute="centerX" id="2e7-gV-W3u"/>
+                                            <constraint firstAttribute="bottom" secondItem="o4l-8v-lAm" secondAttribute="bottom" id="BlD-wl-DTt"/>
+                                            <constraint firstItem="o4l-8v-lAm" firstAttribute="top" secondItem="OEu-BO-z7M" secondAttribute="top" id="H5h-70-9Rg"/>
+                                            <constraint firstItem="qor-Aj-wrp" firstAttribute="centerY" secondItem="OEu-BO-z7M" secondAttribute="centerY" id="Sry-Gi-JSq"/>
+                                            <constraint firstItem="o4l-8v-lAm" firstAttribute="leading" secondItem="OEu-BO-z7M" secondAttribute="leading" id="Yez-qj-E8H"/>
+                                            <constraint firstAttribute="trailing" secondItem="o4l-8v-lAm" secondAttribute="trailing" id="iqe-vj-au9"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="imageView" destination="o4l-8v-lAm" id="int-Kt-f6o"/>
+                                            <outlet property="spinner" destination="qor-Aj-wrp" id="MqH-oo-N1K"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
@@ -255,7 +275,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zLA-4o-ZNX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1630" y="-1040"/>
+            <point key="canvasLocation" x="1647" y="-690"/>
         </scene>
     </scenes>
 </document>
